<resources>
    <string name="app_name">CITtest</string>
    <string name="not_pass">test Failed </string>
    <string name="not_test">It can\'t be done </string>
    <string name="ok">Ok</string>
    <string name="cancle">Cancle</string>
    <string name="close">Close</string>
    <string name="main_title">Function Test</string>
    <string name="select_title">CIT Select Test</string>
    <string name="please_cit1_title">CIT1 no Test,Please Select CIT1 Test</string>
    <string name="to_be_developed">To be developed</string>
    <string name="brightness_title">set brightness value = </string>
    <string name="nfc_layout_tag">Please let NFC tag get close to antenna</string>
    <string name="nfc_layout_tag1">NFC will enable automatically.</string>
    <string name="nfc_layout_tag2">Please let NFC tags get close to antenna.</string>
    <string name="nfc_layout_tag3">The test will be automatically finish.</string>
    <string name="g_sensor_layout_tag">Please shake your cell phone:</string>
    <string name="g_sensor_up">Up:</string>
    <string name="g_sensor_down">Down:</string>
    <string name="g_sensor_left">Left:</string>
    <string name="g_sensor_right">Right:</string>
    <string name="g_sensor_x">X:</string>
    <string name="g_sensor_y">Y:</string>
    <string name="g_sensor_z">Z:</string>
    <string name="led_flag">set status leds to</string>
    <string name="gyro_x_angle">X axis is:</string>
    <string name="gyro_y_angle">Y axis is:</string>
    <string name="gyro_z_angle">Z axis is:</string>
    <string name="l_sensor_tag">Light sensor value = </string>
    <string name="l_sensor_tag1">Please fully cover light sensor,\n the test value should be smaller than  %d.</string>
    <string name="l_sensor_tag2">After that,do not cover the sensor , \n the test value should be larger than  %d.</string>
    <string name="l_sensor_tag3">The test will be automatically finish , \n or expired in 20 second.</string>
    <string name="l_sensor_disable">The L-sensor is not available, test fails!</string>
    <string name="p_sensor_tag">Proximity sensor value = </string>
    <string name="sar_sensor_tag">SAR sensor value = </string>
    <string name="p_sensor_tag1">Please fully cover proximity sensor,\n the test value should be 0.0</string>
    <string name="p_sensor_tag2">The test will be automatically finish , \n or expired in 20 second.</string>
    <string name="vibrator_tag_stop">Make sure the device lies flat on a table,\n Click the \"%s\" to stop motor vibration.</string>
    <string name="vibrator_tag_start">Make sure the device lies flat on a table,\n Click the  \"%s\" to starting motor vibration.</string>
    <string name="vibrator_tag1">Do not touch device while testing</string>
    <string name="vibrator_start">Start</string>
    <string name="vibrator_stop">Stop</string>
    <string name="next">Next</string>
    <string name="message_switch_to_subbattery">Now it is battery powered.Please switch to the subbattery and click next...</string>
    <string name="message_unplug_battery">Now it is Subbattery powered.Please unplug the battery and click next...</string>
    <string name="message_switch_battery">Now is the main battery power supply, please unplug the main battery to switch to the secondary battery, then install the main battery, light up the screen, and finally click next...</string>
    <string name="message_insert_battery">Please insert the battery and click next...</string>
    <string name="message_switch_pribattery">Has switch to the Battery��click next to compelete the subbattery charging...</string>
    <string name="message_sub_battery">SubBattery Electric Test...</string>
    <string name="primary_battery_voltage">Primary Battery Voltage : %.2f V</string>
    <string name="sub_battery_voltage">副电池电压 : %.2f V</string>
    <string name="scan_button_description">Press to start scanning</string>
    <string name="current_now">Current now : %.2f mA </string>
    <string name="show_info">Please click \"%s\" to complete test</string>
    <string name="statusNow">Charging state : %s</string>
    <string name="quantity">Electric quantity: %d %%</string>
    <string name="voltage_now">Voltage state: %.2f V</string>
    <string name="voltage_now_ov">Voltage state: %s</string>
    <string name="change_now">Charging state : </string>
    <string name="Charging">Charging</string>
    <string name="Abnormal">Abnormal</string>
    <string name="NoExist">SubBattery Not Exist</string>
    <string name="normal">Normal</string>
    <string name="Non_change">Non charge</string>
    <string name="Full">Full</string>
    <string name="Battery_Charging_Complete">Battery Charging Complete</string>
    <string name="info_insert_usb">Please plug in the charger</string>
    <string name="stat_unknown">Unknown</string>
    <string name="Discharging">Discharging</string>
    <string name="usb_charging">Charging</string>
    <string name="not_usb_charging">Not USB Charging</string>
    <string name="not_cradle_charging">Not Cradle Charging</string>
    <string name="not_dc_charging">Not DC Charging</string>
    <string name="not_typec_charging">Not Type-C Charging</string>
    <string name="not_pogopin_charging">Not Pogopin Charging</string>
    <string name="test_again">Test again</string>
    <string name="buzzer_test_content">Hear the sound to pass</string>
    <string name="msr_success">Card successfully detected and identified</string>
    <string name="msr_checkfail">The card is detected successfully but the verification is wrong. Please check the relevant situation</string>
    <string name="msr_fail">No card detected</string>
    <string name="flashlight_text">Flashlight</string>
    <string name="flashlight_on">ON</string>
    <string name="flashlight_off">OFF</string>
    <string name="flashlight_msg">There is no flashlight in the equipment</string>
    <string name="flashlight_test_msg">Click the button to test flashlight</string>
    <string name="camera_msg_no">There is no camera in the equipment</string>
    <string name="camera_msg_error">Camera Exception</string>
    <string name="switch_camera">Switch</string>
    <string name="preview">Preview</string>
    <string name="takephoto">TakePhoto</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="start_record">Start Record</string>
    <string name="stop_record">Stop Record</string>
    <string name="start_tag"> </string>
    <string name="psam_test">The test will be completed in %d seconds </string>
    <string name="psam_test_normal">The PSAM Card is working properly </string>
    <string name="psam_test_next">No PSAM </string>
    <string name="psam2_test_next">No PSAM 2 </string>
    <string name="run_in_test_finish">Run-In Test has been completed</string>
    <string name="pcba_test_finish">PCBA Test has been completed</string>
    <string name="pcba_test_result">PCBA Test Result:</string>
    <string name="pcba_auto_test_result">PCBA Auto Test Result:</string>
    <string name="lamp_plate_result">Lamp Plate Test Result:</string>
    <string name="pre_function_test_finish">Pre-Function Test has been completed</string>
    <string name="pre_function_test_result">Pre-Function Test Result:</string>
    <string name="mmi1_pre_function_test_finish">MMI1 Test has been completed</string>
    <string name="mmi1_pre_function_test_result">MMI1 Test Result:</string>
    <string name="mmi2_pre_function_test_finish">MMI2 Test has been completed</string>
    <string name="mmi2_pre_function_test_result">MMI2 Test Result:</string>
    <string name="information_check_test_finish">Information Check Test has been completed</string>
    <string name="power_board_test_finish">Power Board Test has been completed</string>
    <string name="smt_keypad_test_finish">SMT Keypad Test has been completed</string>
    <string name="keypad_power_board_test_finish">Keypad and Power Board Test has been completed</string>
    <string name="earphone_play">PLAY VIDEO</string>
    <string name="earphone_stop">STOP VIDEO</string>
    <string name="earphone_start_record">START RECORD</string>
    <string name="earphone_stop_record">STOP RECORD</string>
    <string name="earphone_un">Please insert earphone</string>
    <string name="earphone">Earphones have been inserted</string>
    <string name="tips">Please speak to the headset mic.</string>
    <string name="speak_tips">Please click ‘%s’ \nspeak to the main Mic\n and listen to judge the effect.</string>
    <string name="speakloop_prompt_start">Start Record</string>
    <string name="speakloop_prompt_stop">Stop Record</string>
    <string name="earphone_key">Detection of the headset buttons</string>
    <string name="earphone_keyun">Please press the headset hook.</string>
    <string name="earphone_keyptt">Please press the PTT key of the headset</string>
    <string name="earphone_keyptt_has_pressed">The PTT key of the headset has been pressed</string>
    <string name="earphone_pulled_out">EarPhone have been pulled out</string>
    <string name="earphone_inserted">EarPhone inserted</string>
    <string name="battery_charge_tag">Please do not keep charging</string>
    <string name="battery_charge_is">Battery charge is:</string>
    <string name="battery_second_voltage">Second battery voltage:</string>
    <string name="battery_second_charge_state">Second battery charge state:</string>
    <string name="battery_second_state">Second battery state:</string>
    <string name="battery_charger_voltage">Charging voltage:</string>
    <string name="battery_charger_status">Charging status:</string>
    <string name="battery_charger_method">Charging method:</string>
    <string name="bluetooth_list">Bluetooth Lists</string>
    <string name="bluetooth_address">Bluetooth MAC Address: </string>
    <string name="bluetooth_no_device">Scan finished</string>
    <string name="bluetooth_scan">Rescan</string>
    <string name="speaker_tag">Please check the audio played at Speaker</string>
    <string name="speaker_tag1">Please select the sound you hear</string>
    <string name="speaker_sure">Sure</string>
    <string name="start_record_audio">Start Record</string>
    <string name="stop_record_audio">Stop Record</string>
    <string name="record_play_audio">Play Audio</string>
    <string name="record_status">record status</string>
    <string name="heating_test_tag1">Test heating for 10 seconds</string>
    <string name="heating_test_tag2">if the heating temperature is greater than 2 degrees, pass</string>
    <string name="cold_chain_mcu_tag">MCU:</string>
    <string name="cold_chain_fpc_tag">FPC:</string>
    <string name="pcba_p_sensor_calibration_instructions">Please follow the instructions:</string>
    <string name="test">Test</string>
    <string name="calibration">Calibration</string>
    <string name="RxTxStatus">RxTx Status:</string>
    <string name="uhf_power_supply_status">UHF Power Supply Status:</string>
    <string name="uhf_eint_triggle_status">UHF Eint/Triggle Status:</string>
    <string name="gpio9_cradle_io2_test">GPIO9_CRADLE_IO2 Test:</string>
    <string name="gpio64_cradle_io3_test">GPIO64_CRADLE_IO3 Test:</string>
    <string name="cradle_DC_PWM_test">DC_PWM Test:</string>
    <string name="cradle_VBUS_5V_test">VBUS_5V Test:</string>
    <string name="cradle_GPIO74_CRADLE_IO1_test">GPIO74_CRADLE_IO1 Test:</string>
    <string name="cradle_usb_sub_uart_test">USB_SUB uart Test:</string>
    <string name="cradle_gpio0_gpio1_uart_test">gpio0-gpio1 uart Test:</string>
    <string name="cradle_dc_adc_test">DC_ADC Test:</string>
    <string name="mesh_plate_testing">test is running...</string>
    <string name="sunmi_message_switch_battery_debug1">测试步骤:\n1.去除电池后盖</string>
    <string name="sunmi_message_switch_battery_debug2">2.灭屏后等待3秒</string>
    <string name="sunmi_message_switch_battery_debug3">3.去掉主电池\n4.按上主电池\n5.按上电池盖\n6.按电源键亮屏\n7.点击下一步</string>
</resources>