<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_txt_bg"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".activity.ColdChainTestActivity">

    <include
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_tag"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />
    <TextView
        android:id="@+id/mcu_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cold_chain_mcu_tag"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />
    <TextView
        android:id="@+id/heating_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cold_chain_fpc_tag"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/activity_below"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/heating_test_tag1"
                android:textColor="@color/black_dan"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:text="@string/heating_test_tag2"
                android:textColor="@color/black_dan"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>