<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_txt_bg"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".activity.UHFTestActivity">

    <include
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_tag"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />
    <TextView
        android:id="@+id/RxTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/RxTxStatus"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />
    <TextView
        android:id="@+id/powerSupplyStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/uhf_power_supply_status"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />
    <TextView
        android:id="@+id/eintTriggleStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/uhf_eint_triggle_status"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/activity_below"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>