<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_txt_bg"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".activity.CradleUartTestActivity">

    <include
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_tag"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize" />

    <TextView
        android:id="@+id/mesh_plate_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mesh_plate_testing"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize"/>
    <TextView
        android:id="@+id/mesh_plate_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/success"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/mesh_plate_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fail"
        android:textColor="@color/black_dan"
        android:textSize="@dimen/fontSize"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/activity_below"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</LinearLayout>