<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_txt_bg"
    android:orientation="vertical"
    android:overScrollMode="never"
    tools:context=".activity.SunMiRecordActivity">

    <include
        layout="@layout/include_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/record_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:text="@string/record_status"
                android:textSize="20sp" />

            <Button
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="40dp"
                android:text="@string/start_record_audio"
                android:textSize="@dimen/fontSize" />

            <Button
                android:id="@+id/stop"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="40dp"
                android:text="@string/stop_record_audio"
                android:textSize="@dimen/fontSize" />

            <Button
                android:id="@+id/play"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="40dp"
                android:text="@string/record_play_audio"
                android:textSize="@dimen/fontSize" />
        </LinearLayout>

        <include
            layout="@layout/activity_below"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</LinearLayout>